@@ -1,3 +1,8 @@
+2005-02-06  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* avoid last lines in tabulars (more beautiful)
+	* return key in sweep edit dialog
+
 2005-01-28  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* selecting graphs works again
